--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+*{
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+}
 .App {
   text-align: center;
 }
@@ -35,4 +40,44 @@
   to {
     transform: rotate(360deg);
   }
+}
+/* style --> login page */
+.container{
+min-height: 100vh;
+display: flex;
+align-items: center;
+justify-content: center;
+background-color: #282c34;
+
+}
+.container form{
+display: flex;
+flex-direction: column;
+
+}
+
+.container form >*{
+margin-bottom: 15px;
+height: 45px;
+width: 200px;
+color:#282c34;
+font-size: 20px;
+outline: none;
+padding: 5px 10px;
+border: none;
+border-radius: 5px;
+background-color: aliceblue;
+}
+
+.container form button{
+  margin-bottom: 0px;
+  font-size: 16px;
+  height: 35px;
+cursor: pointer;
+color: white;
+background-color: rgb(9, 88, 88);
+font-weight: bold;
+}
+.container form button:hover{
+
 }
