--- a/src/App.css
+++ b/src/App.css
@@ -102,3 +102,12 @@ background-color: rgb(5, 7, 7);
 cursor: not-allowed;
 }
 
+.container .btns button{
+  margin-top: 10px;
+margin-right: 10px;
+cursor: pointer;
+}
+.container div > h1{
+color: white;
+margin-bottom: 20px;
+}
